--- a/almostdouble/templates/base.html.twig
+++ b/almostdouble/templates/base.html.twig
@@ -26,8 +26,8 @@
 				<div class="collapse navbar-collapse" id="navbarSupportedContent">
 					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 						<li class="nav-item">
-							<a class="nav-link {% if current_menu is defined and current_menu=='properties' %} active {% endif %}"
-							 aria-current="page" href="{{ path('property.index') }}">Liste des doubles</a>
+							<a class="nav-link {% if current_menu is defined and current_menu=='list' %} active {% endif %}"
+							 aria-current="page" href="{{ path('double.index') }}">Liste des doubles</a>
 						</li>
 					</ul>
 					<form class="d-flex">
