--- a/LearnEnglish/templates/english/index.html.twig
+++ b/LearnEnglish/templates/english/index.html.twig
@@ -12,7 +12,7 @@
             sint tempore?</p>
         <p>Dolorem laborum libero maxime mollitia non nulla obcaecati perspiciatis placeat, porro repellendus sed,
             voluptas voluptatibus.</p>
-        <a href="" class="btn btn-primary">Lire la suite</a></div>
+        <a href="{{ path('lecon_show') }}" class="btn btn-primary">Lire la suite</a></div>
 </article>
 
     <article><h2>Titre de la Lecon</h2>
@@ -23,7 +23,7 @@
             sint tempore?</p>
         <p>Dolorem laborum libero maxime mollitia non nulla obcaecati perspiciatis placeat, porro repellendus sed,
             voluptas voluptatibus.</p>
-        <a href="" class="btn btn-primary">Lire la suite</a></div>
+        <a href="{{ path('lecon_show') }}" class="btn btn-primary">Lire la suite</a></div>
     </article>
 
     <article><h2>Titre de la Lecon</h2>
@@ -34,7 +34,7 @@
             sint tempore?</p>
         <p>Dolorem laborum libero maxime mollitia non nulla obcaecati perspiciatis placeat, porro repellendus sed,
             voluptas voluptatibus.</p>
-        <a href="" class="btn btn-primary">Lire la suite</a></div>
+        <a href="{{ path('lecon_show') }}" class="btn btn-primary">Lire la suite</a></div>
     </article>
 </section>
 
