--- a/LearnEnglish/templates/base.html.twig
+++ b/LearnEnglish/templates/base.html.twig
@@ -10,9 +10,7 @@
             {#{{ encore_entry_link_tags('app') }}#}
         {% endblock %}
 
-        {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-        {% endblock %}
+
     </head>
     <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -23,20 +21,25 @@
 
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/Christmas">Christams
+                <li class="nav-item ">
+                    <a class="nav-link" href="/lecon">Lecon
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
+
                 <li class="nav-item">
-                    <a class="nav-link" href="/Hallowen">Hallowen</a>
+                    <a class="nav-link" href="/english/nwe">Créer une leçon</a>
                 </li>
-
-
+            </ul>
+    </nav>
         <div class="container">
             {% block body %}{% endblock %}
         </div>
 
 
+
+                {% block javascripts %}
+                    {#{{ encore_entry_script_tags('app') }}#}
+                {% endblock %}
     </body>
 </html>
