--- a/LearnEnglish/templates/english/index.html.twig
+++ b/LearnEnglish/templates/english/index.html.twig
@@ -3,18 +3,39 @@
 {% block title %}Hello EnglishController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<section>
+    <article><h2>Titre de la Lecon</h2>
+    <div class="metadata">Ecrit le 10/05/2021 à 19:00 dans la catégorie Hallowen</div>
+    <div class="content">
+        <img src="https://via.placeholder.com/350x150" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias consequatur eos exercitationem repellendus,
+            sint tempore?</p>
+        <p>Dolorem laborum libero maxime mollitia non nulla obcaecati perspiciatis placeat, porro repellendus sed,
+            voluptas voluptatibus.</p>
+        <a href="" class="btn btn-primary">Lire la suite</a></div>
+</article>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <article><h2>Titre de la Lecon</h2>
+    <div class="metadata">Ecrit le 10/05/2021 à 19:00 dans la catégorie Hallowen</div>
+    <div class="content">
+        <img src="https://via.placeholder.com/350x150" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias consequatur eos exercitationem repellendus,
+            sint tempore?</p>
+        <p>Dolorem laborum libero maxime mollitia non nulla obcaecati perspiciatis placeat, porro repellendus sed,
+            voluptas voluptatibus.</p>
+        <a href="" class="btn btn-primary">Lire la suite</a></div>
+    </article>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'E:/wamp64/www/ProjetWebGroupeC/LearnEnglish/src/Controller/EnglishController.php'|file_link(0) }}">src/Controller/EnglishController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'E:/wamp64/www/ProjetWebGroupeC/LearnEnglish/templates/english/index.html.twig'|file_link(0) }}">templates/english/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <article><h2>Titre de la Lecon</h2>
+    <div class="metadata">Ecrit le 10/05/2021 à 19:00 dans la catégorie Hallowen</div>
+    <div class="content">
+        <img src="https://via.placeholder.com/350x150" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias consequatur eos exercitationem repellendus,
+            sint tempore?</p>
+        <p>Dolorem laborum libero maxime mollitia non nulla obcaecati perspiciatis placeat, porro repellendus sed,
+            voluptas voluptatibus.</p>
+        <a href="" class="btn btn-primary">Lire la suite</a></div>
+    </article>
+</section>
+
 {% endblock %}
