--- a/LearnEnglish/templates/base.html.twig
+++ b/LearnEnglish/templates/base.html.twig
@@ -14,7 +14,7 @@
     </head>
     <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="/">Welcome</a>
+        <a class="navbar-brand" href="{{ path ('home') }}">Welcome</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,13 +22,13 @@
         <div class="collapse navbar-collapse" id="navbarColor01">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item ">
-                    <a class="nav-link" href="/lecon">Lecon
-                        <span class="sr-only">(current)</span>
+                    <a class="nav-link" href="{{ path('english') }}">Lecon
+
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="/english/nwe">Créer une leçon</a>
+                    <a class="nav-link" href="{{ path('english_create') }}">Créer une leçon</a>
                 </li>
             </ul>
     </nav>
