--- a/almostdouble/templates/admin/double/edit.html.twig
+++ b/almostdouble/templates/admin/double/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 	<div class="container mt-4">
-		<h1>Editer le bien</h1>
+		<h1>Editer le double</h1>
 		{{ include("admin/double/_form.html.twig", {form: form, button: "Editer"}) }}
 	</div>
 {% endblock %}
