--- a/almostdouble/templates/base.html.twig
+++ b/almostdouble/templates/base.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>
-			{% block title %}Welcome!
+			{% block title %}Doubles?
 			{% endblock %}
 		</title>
 		{% block stylesheets %}
@@ -30,10 +30,13 @@
 							 aria-current="page" href="{{ path('double.index') }}">Liste des doubles</a>
 						</li>
 					</ul>
-					<form class="d-flex">
-						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-						<button class="btn btn-outline-success" type="submit">Search</button>
-					</form>
+					{% if app.user %}
+						<ul class="navbar-nav">
+							<li class="nav-item">
+								<a href={{ path('logout') }} class="nav-link">Se déconnecter</a>
+							</li>
+						</ul>
+					{% endif %}
 				</div>
 			</div>
 		</nav>
