--- a/almostdouble/templates/pages/home.html.twig
+++ b/almostdouble/templates/pages/home.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title 'Agence lorem ipsum' %}
+
 {% block body %}
 	<div class="jumbotron text-center">
 		<h1>Agence lorem ipsum</h1>
