--- a/almostdouble/templates/pages/home.html.twig
+++ b/almostdouble/templates/pages/home.html.twig
@@ -15,22 +15,7 @@
 		<div class="row flex">
 			{% for double in doubles %}
 				<div class="col-3">
-					<div class="card">
-						<div class="card-body">
-							<h5 class="card-title">
-								<a href="{{ path('double.show', {id: double.id, slug: double.slug}) }}">{{ double.number1 }}
-									;
-									{{ double.number2 }}</a>
-							</h5>
-							<p class="card-text">
-								{% if double.askresult %}
-									Oui
-								{% else %}
-									Non
-								{% endif %}
-							</p>
-						</div>
-					</div>
+					{% include "property/_double.html.twig" %}
 				</div>
 			{% endfor %}
 		</div>
