--- a/almostdouble/templates/pages/home.html.twig
+++ b/almostdouble/templates/pages/home.html.twig
@@ -14,8 +14,28 @@
 		</h2>
 		<div class="row flex">
 			{% for ldouble in ldoubles %}
-				<div class="col-3">
-					{% include "/listdouble/_listdouble.html.twig" %}
+				<div class="col-md-4">
+					<div class="card mb-4">
+						<div class="card-body">
+							<h5 class="card-title">
+								<a href="{{ path('listcouples.show', {id: ldouble.id, slug: ldouble.slug}) }}">ID :
+									{{ ldouble.id }}</a>
+							</h5>
+							<h5 class="card-text">
+								{% for double in ldouble.couples[:4] %}
+									<div class="card mb-4">
+										<div class="card-body">
+											<h5 class="card-title">
+												{{ double.number1 }}
+												-
+												{{ double.number2 }}
+											</h5>
+										</div>
+									</div>
+								{% endfor %}
+							</h5>
+						</div>
+					</div>
 				</div>
 			{% endfor %}
 		</div>
