--- a/almostdouble/templates/admin/listdouble/index.html.twig
+++ b/almostdouble/templates/admin/listdouble/index.html.twig
@@ -17,6 +17,7 @@
 				<tr>
 					<th>Titre</th>
 					<th>Actions</th>
+					<th>Liens</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -31,6 +32,9 @@
 								<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ ldouble.id) }}">
 								<button class="btn btn-danger">Supprimer</button>
 							</form>
+						</td>
+						<td>
+							<a href="{{ path('almostdouble.index', {id: ldouble.id}) }}" class="btn btn-info">{{ path('almostdouble.index', {id: ldouble.id}) }}</a>
 						</td>
 					</tr>
 				{% endfor %}
